2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/item_list_event_extended.xml, res/layout/main.xml,
	res/layout/options.xml, res/drawable/button_pressed.9.png,
	res/drawable/pandora_button.xml, res/drawable/button_normal.9.png:
	changes in the themes.

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/drawable-ldpi/delete_pressed.png,
	res/drawable-ldpi/save_pressed.png, res/layout/main.xml,
	res/drawable/save_icon_button.xml,
	res/drawable/delete_icon_button.xml: changes in the themes. 

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/main.xml, res/drawable/combobox_pressed.9.png: changes
	in the themes.

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/main.xml, res/layout/list_view_layout.xml,
	res/drawable/refresh_icon_button.xml,
	res/drawable/filter_icon_button.xml,
	res/drawable-ldpi/icon_refresh_pressed.png,
	res/drawable-ldpi/refrest_icon.png,
	res/drawable-ldpi/filter_icon.png,
	res/drawable-ldpi/icon_filter_pressed.png,
	res/drawable-ldpi/pandorafms_logo.png: changes in the themes.

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/drawable-ldpi/about.png, res/drawable-ldpi/save.png,
	res/drawable-ldpi/delete.png, res/drawable-ldpi/config.png,
	res/layout/list_view_layout.xml: changes in the themes.

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* res/layout/item_list_event_extended.xml: changes in the themes.

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	res/layout/item_list_event_layout.xml,
	res/layout/list_view_layout.xml,
	res/layout/item_list_event_extended.xml: changes in the themes.

2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* src/pandroid_event_viewer/pandorafms/EventList.java,
	res/layout/item_list_event_layout.xml,
	res/layout/list_view_layout.xml, res/drawable/round_event_item.xml,
	res/drawable/round_event_item_blue.xml,