@@ -1,3 +1,9 @@
+2013-11-07  Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* res/values-ja/strings.xml, res/values/strings.xml,
+	res/values-es/strings.xml, res/layout/main.xml: changes in the
+	themes.
+
 2013-11-06  Miguel de Dios  <miguel.dedios@artica.es>
 	
 	* res/layout/item_list_event_extended.xml, res/layout/main.xml,
